﻿06/06/2018 (0.9.1)
Initial release

17/09/2018 (1.0.0)
First release version:
- added logging
- possibility to do get latest version for the source or target branch
- warning when workspace contains included pending changes

21/11/2018 (1.1.0)
- Ability to save last merge selections per solution (thanks Maikel Tielens for this implementation https://github.com/maikelt)
- Settings screen: Solved issue where sometimes the settings screen wouldn't save
- You can now exclude work item types from associated work items of the merging changesets

25/11/2018 (1.1.1)
- Fixed issue where settings would not select the saved branch to do get latest on before merging

12/12/2018 (1.1.2)
- Solved issue when no settings where configured, merge would not fetch the associated work items

21/01/2019 (1.2.0)
- Add a comment to your pending changes before check-in

16/04/2019 (2.0.0)
- Update for Visual Studio 2019

16/04/2019 (2.0.1)
- Remove Dependency for MPF. This is no longer needed

08/09/2019 (2.1.0)
- New way of fecthing work item types (Had to change before 2020 because it would be obsolete)
- Possible to exclude work items when merging
- Show in comments when merging the latest version of the branch