@@ -7,7 +7,7 @@ namespace TeamMerge.Helpers
 {
     public static class CommentOutputHelper
     {
-        public static string GetCheckInComment(CheckInComment checkInCommentChoice, string commentFormat, string sourceBranch, string targetBranch, IEnumerable<int> workItemIds, bool isLatestVersion)
+        public static string GetCheckInComment(CheckInComment checkInCommentChoice, string commentFormat, string sourceBranch, string targetBranch, IEnumerable<int> workItemIds, IEnumerable<int> changesetIds, bool isLatestVersion)
         {
             var comment = string.Empty;
 
@@ -19,7 +19,7 @@ namespace TeamMerge.Helpers
                 }
                 else if (checkInCommentChoice == CheckInComment.WorkItemIds)
                 {
-                    comment = string.Format(CultureInfo.CurrentCulture, commentFormat, GetWorkItemsComment(workItemIds, isLatestVersion));
+                    comment = string.Format(CultureInfo.CurrentCulture, commentFormat, GetIdsSplitedOrShowLatestVersionComment(workItemIds, isLatestVersion));
                 }
                 else if (checkInCommentChoice == CheckInComment.Fixed)
                 {
@@ -27,7 +27,15 @@ namespace TeamMerge.Helpers
                 }
                 else if (checkInCommentChoice == CheckInComment.MergeDirectionAndWorkItems)
                 {
-                    comment = string.Format(CultureInfo.CurrentCulture, commentFormat, sourceBranch.GetBranchName(), targetBranch.GetBranchName(), GetWorkItemsComment(workItemIds, isLatestVersion));
+                    comment = string.Format(CultureInfo.CurrentCulture, commentFormat, sourceBranch.GetBranchName(), targetBranch.GetBranchName(), GetIdsSplitedOrShowLatestVersionComment(workItemIds, isLatestVersion));
+                }
+                else if (checkInCommentChoice == CheckInComment.ChangesetIds)
+                {
+                    comment = string.Format(CultureInfo.CurrentCulture, commentFormat, GetIdsSplitedOrShowLatestVersionComment(changesetIds, isLatestVersion));
+                }
+                else if (checkInCommentChoice == CheckInComment.MergeDirectionAndChangesetIds)
+                {
+                    comment = string.Format(CultureInfo.CurrentCulture, commentFormat, sourceBranch.GetBranchName(), targetBranch.GetBranchName(), GetIdsSplitedOrShowLatestVersionComment(changesetIds, isLatestVersion));
                 }
             }
             catch (FormatException)
@@ -38,7 +46,7 @@ namespace TeamMerge.Helpers
             return comment;
         }
 
-        private static string GetWorkItemsComment(IEnumerable<int> workItemIds, bool isLatestVersion)
+        private static string GetIdsSplitedOrShowLatestVersionComment(IEnumerable<int> workItemIds, bool isLatestVersion)
         {
             if (isLatestVersion)
             {
