@@ -13,6 +13,10 @@ namespace TeamMerge.Settings.Enums
         [LocalizedDescription(nameof(Resources.FixedComment), typeof(Resources))]
         Fixed,
         [LocalizedDescription(nameof(Resources.MergeDirectionAndWorkItemsComment), typeof(Resources))]
-        MergeDirectionAndWorkItems
+        MergeDirectionAndWorkItems,
+        [LocalizedDescription(nameof(Resources.ChangesetIdsComment), typeof(Resources))]
+        ChangesetIds,
+        [LocalizedDescription(nameof(Resources.MergeDirectionAndChangesetIdsComment), typeof(Resources))]
+        MergeDirectionAndChangesetIds
     }
 }
